--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
     "font-awesome": "^4.7.0",
     "framer-motion": "^12.1.0",
     "lodash.debounce": "^4.0.8",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.4",
     "react-select": "^5.10.1",
